changes in many files

--- a/TestAPI3/Views/Home/Index.cshtml
+++ b/TestAPI3/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="content-wrapper">
             <hgroup class="title">
                 <h1>Welcome to ASP.NET Web API!</h1>
-                <h2>Modify the code in this template to jump-start your ASP.NET Web API development.</h2>
+              
             </hgroup>
             <p>
                 ASP.NET Web API allows you to expose your applications, data and services to the
@@ -43,9 +43,9 @@
                 <a href="http://go.microsoft.com/fwlink/?LinkId=245161">Learn more…</a>
             </li>
             <li class="three">
+
                 <h5>Find Web Hosting</h5>
-                You can easily find a web hosting company that offers the right mix of features
-                and price for your applications.
+               you can easily find a web hosting here.
                 <a href="http://go.microsoft.com/fwlink/?LinkId=245164">Learn more…</a>
             </li>
         </ol>
